--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 /* LOGIN PAGE AND SIGNUP PAGE */
 .login-container, .signup-container{
-background: url(/Users/rosienardulli/code/mySpots/assets/images/Map-bgd.jpg);
+background: url(../mySpots/assets/images/Map-bgd.jpg);
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center; 
@@ -152,6 +152,42 @@ background-color: #cfd8dc;
 color: green;
 font-size: 50px;
 text-align: center;
-background: url(/Users/rosienardulli/code/mySpots/assets/images/Google-Maps.jpg);
+background: url(../mySpots/assets/images/Google-Maps.jpg);
 height: 300px;
 }
+
+.modalmySpot {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    max-width: 100%;
+    height: 200px;
+    display: flex;
+
+ 
+}
+.modal.closed {
+ 
+ /*   display: none; */
+  
+  }
+
+.modalmySpot-overlay {
+
+    /* recommendation:
+       don't focus on the number "1000" here, but rather,
+       you should have a documented system for z-index and 
+       follow that system. This number should be pretty
+       high on the scale in that system.
+    */
+    z-index: 1000;
+  
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  
+  }
