--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,19 +1,9 @@
 /* LOGIN PAGE AND SIGNUP PAGE */
-.container-style{
-background: url(../images/Map-bgd.jpg);
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-position: center; 
-text-align: center;
-background-size: cover;  
-height: 100vh;
-padding-top: calc(50vh - 150px);
-}
 .display-box{ 
 background-color: #cfd8dc;
 width: 600px;
 height:275px;
-border:1px solid #2286c3;
+border-radius: 30px;
 display: block;
 margin : 0 auto;
 padding: 30px;
@@ -135,5 +125,55 @@ font-family: 'Istok Web', sans-serif;
 text-align:center;
 }
 
-
+/* SPOTS DELETION PAGE */
+#delete-page-title{
+color:#1985c1;
+background-color:#ced7db;
+font-size: 40px;
+font-family: 'Istok Web', sans-serif;
+text-align: center;
+padding:40px;
+}
+#spots-deletion-list{
+width: 50%;
+background-color: #64b5f6;
+height: 100px;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+padding: 20px;
+border-radius:20px;
+border: 5px solid #1985c1;
+color: white;
+font-family: 'Istok Web', sans-serif;
+font-size: 20px; 
+}
+#spot-deletion-confirm{
+text-align: center;
+margin-top: 40px;
+margin-left: 50%;
+margin-bottom: 50px;
+font-family: 'Istok Web', sans-serif;
+font-size: 30px;
+border-radius: 30px;
+background-color: #1985c1;
+font-size: 20px;
+padding: 20px;
+margin: 50px;
+height: 20%;
+width: 15%;
+color: white;
+}
+#spots-deletion-back{
+border-radius: 30px;
+background-color: #1985c1;
+font-size: 20px;
+padding: 20px;
+margin: 50px;
+height: 20%;
+width: 15%;
+float: left;
+font-family: 'Istok Web', sans-serif;
+color: white;
+}
 
