--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,3 +173,31 @@ width: 15%;
 color: white;
 }
 
+/*Preferences */
+
+.spotsBgColor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ced7db;    
+
+}
+
+.spotsButton {
+text-align: center;
+margin-top: 40px;
+margin-left: 50%;
+margin-bottom: 50px;
+font-family: 'Istok Web', sans-serif;
+font-size: 30px;
+border-radius: 30px;
+background-color: #1985c1;
+font-size: 20px;
+padding: 20px;
+margin: 50px;
+height: 20%;
+width: 15%;
+color: white;
+}
