--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,10 +57,10 @@ background-color: #ced7db;
 }
 #map {
 height: 440px;
-width: 50%;
+width: 90%;
 margin: 0 auto 0 auto;
-border: 8px solid #1985c1;
-border-radius: 30px;
+border: 6px solid #1985c1;
+border-radius: 20px;
 }
 .create-spot, .menu-style{
 color:white;
@@ -201,3 +201,44 @@ height: 20%;
 width: 15%;
 color: white;
 }
+
+.spotsTitle {
+  
+        color:#1985c1;
+        background-color:#ced7db;
+        font-size: 40px;
+        font-family: 'Istok Web', sans-serif;
+        text-align: center;
+        padding:40px;
+}
+
+.spotsCol {
+
+    text-align: center;
+    padding:40px;
+}
+
+.spotsCol select {
+    width: 350px;
+    margin: 10px;
+}
+
+.spotsCol select option {
+ 
+        font-family: 'Istok Web', sans-serif;
+}
+
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+/* .spotsDiv {
+background-color: #cfd8dc;
+width: 600px;
+height: 475px;
+border-radius: 30px;
+margin : auto 0;;
+
+
+} */
