--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,13 +52,7 @@ background-color: #ced7db;
 .row{
 background-color: #ced7db;
 }
-#map {
-height: 440px;
-width: 90%;
-margin: 0 auto 0 auto;
-border: 6px solid #1985c1;
-border-radius: 20px;
-}
+
 .create-spot, .menu-style{
 color:white;
 font-family: 'Istok Web', sans-serif;
@@ -93,6 +87,26 @@ font-size: 20px;
 text-align: center;
 }
 
+/* map */
+#map {
+    height: 440px;
+    width: 90%;
+    margin: 0 auto 0 auto;
+    border: 6px solid #1985c1;
+    border-radius: 20px;
+    }
+    
+    .pac-container {
+        z-index: 10000;
+        }
+        .pac-container:after{
+            display:none !important;
+        }
+    
+    /* end of map */
+
+
+/* dynamic generated spots css */
 .spot {
 width: 100%;
 background-color: #64b5f6;
@@ -115,12 +129,13 @@ padding: 10px;
 .spot-timeTo {
 padding: 10px;
 }
-.pac-container {
-z-index: 10000;
+
+
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
 }
-.pac-container:after{
-    display:none !important;
-}
+
 
 /* TITLE */
 #title {
@@ -193,6 +208,31 @@ margin:4%;
 color: white;
 }
 
+/* checkboxes for delete a spot */
+
+
+.deletionCheckbox {
+ 
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+}
+
+.liDeletion .deletionCheckbox:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+
 
 /* CREATE SPOT POP UP */
 .modal-header{
@@ -233,30 +273,35 @@ width: 100%;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ced7db;    
+    background-color:#64b5f6;  
+
+}
+
+spotsBgColorGray{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:#ced7db;
 
 }
 
 .spotsButton {
-text-align: center;
-margin-top: 40px;
-margin-left: 50%;
-margin-bottom: 50px;
-font-family: 'Istok Web', sans-serif;
-font-size: 30px;
-border-radius: 30px;
-background-color: #1985c1;
-font-size: 20px;
-padding: 20px;
-margin: 50px;
-height: 20%;
-width: 15%;
-color: white;
+    text-align: center;
+    font-family: 'Istok Web', sans-serif;
+    font-size: 30px;
+    border-radius: 30px;
+    background-color: #1985c1;
+    font-size: 20px;
+    padding: 20px;
+    height: 20%;
+    width: 40%;
+    margin: 4%;
+    color: white;
 }
 
-<<<<<<< HEAD
 .spotsTitle {
-  
         color:#1985c1;
         background-color:#ced7db;
         font-size: 40px;
@@ -268,8 +313,10 @@ color: white;
 .spotsCol {
 
     text-align: center;
-    padding:40px;
+
 }
+
+
 
 .spotsCol select {
     width: 350px;
@@ -281,19 +328,7 @@ color: white;
         font-family: 'Istok Web', sans-serif;
 }
 
-.no-gutter > [class*='col-'] {
-    padding-right:0;
-    padding-left:0;
-}
-
-/* .spotsDiv {
-background-color: #cfd8dc;
-width: 600px;
-height: 475px;
-border-radius: 30px;
-margin : auto 0;;
 
 
-} */
-=======
->>>>>>> b2f5b21fe9dfd8c04b472b01d59d58267be57859
+
+
