--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,8 +160,9 @@ text-align:center;
     flex-direction: column;
     justify-content: center;
 background-color: #cfd8dc;
-width: 850px;
-height:450px;
+width: 65%;
+max-width: 850px;
+height: 450px;
 border-radius: 30px;
 display: block;
 margin : auto;
@@ -178,7 +179,6 @@ text-align: center;
 padding:10px;
 }
 #spots-deletion-list{
-width: 100%;
 background-color: #64b5f6;
 height: 100px;
 display: flex;
@@ -194,7 +194,12 @@ text-align:center;
 margin: 20px;
 }
 
-#spot-deletion-confirm, #spots-deletion-back{
+#spot-deletion-confirm, #spots-deletion-back, #preferences-back, #preferences-confirm {
+    font-family: 'Istok Web', sans-serif;
+    font-size: 20px;
+}
+
+/* #spot-deletion-confirm, #spots-deletion-back{
 text-align: center;
 font-family: 'Istok Web', sans-serif;
 font-size: 30px;
@@ -203,10 +208,9 @@ background-color: #1985c1;
 font-size: 20px;
 padding: 20px;
 height: 20%;
-width: 30%;
 margin:4%;
 color: white;
-}
+} */
 
 /* checkboxes for delete a spot */
 
@@ -315,7 +319,6 @@ spotsBgColorGray{
     text-align: center;
 
 }
-
 
 
 .spotsCol select {
